--- a/MeetingApp/User/Artifacts/GeneralInformationUserTableViewCell.xib
+++ b/MeetingApp/User/Artifacts/GeneralInformationUserTableViewCell.xib
@@ -35,7 +35,7 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="i2O-Nz-WW0">
                         <rect key="frame" x="137" y="209" width="30" height="30"/>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bvy-KB-v4d">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bvy-KB-v4d">
                         <rect key="frame" x="130" y="28" width="115" height="115"/>
                     </imageView>
                 </subviews>
