--- a/MeetingApp/User/Artifacts/LocationUserTableViewCell.xib
+++ b/MeetingApp/User/Artifacts/LocationUserTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -23,20 +23,13 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="disclosure" translatesAutoresizingMaskIntoConstraints="NO" id="bQs-JK-mCf">
-                        <rect key="frame" x="342" y="22" width="25" height="25"/>
-                    </imageView>
                 </subviews>
             </tableViewCellContentView>
             <connections>
-                <outlet property="disclosureImage" destination="bQs-JK-mCf" id="ZlJ-aG-kCe"/>
                 <outlet property="locationPhoto" destination="gDw-vj-9fd" id="6um-Ct-fNN"/>
                 <outlet property="locationText" destination="3E1-fu-eEZ" id="Ei0-gq-mpn"/>
             </connections>
             <point key="canvasLocation" x="296.5" y="418"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="disclosure" width="26" height="28"/>
-    </resources>
 </document>
