--- a/MeetingApp/Guest/Artifacts/LocationGuestTableViewCell.xib
+++ b/MeetingApp/Guest/Artifacts/LocationGuestTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -14,29 +14,22 @@
                 <rect key="frame" x="0.0" y="0.0" width="375" height="69"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="luN-3p-H7y">
+                        <rect key="frame" x="21" y="8" width="55" height="55"/>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jRZ-qJ-VpK">
-                        <rect key="frame" x="71" y="19" width="258" height="31"/>
+                        <rect key="frame" x="84" y="19" width="258" height="31"/>
                         <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="luN-3p-H7y">
-                        <rect key="frame" x="8" y="6" width="55" height="55"/>
-                    </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="disclosure" translatesAutoresizingMaskIntoConstraints="NO" id="G4K-Ar-1gs">
-                        <rect key="frame" x="342" y="21" width="25" height="25"/>
-                    </imageView>
                 </subviews>
             </tableViewCellContentView>
             <connections>
-                <outlet property="disclosureImage" destination="G4K-Ar-1gs" id="GxJ-4M-dSI"/>
                 <outlet property="locationPhoto" destination="luN-3p-H7y" id="3l9-N0-bvr"/>
                 <outlet property="locationText" destination="jRZ-qJ-VpK" id="Jb6-ns-Y19"/>
             </connections>
             <point key="canvasLocation" x="305.5" y="441"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="disclosure" width="26" height="28"/>
-    </resources>
 </document>
